test/syntax/fail/not_combinatorial/fun_fby.sync
let f x = x fby true
